# class-creator-rust-wasm

./: .gitignore  CNAME  Cargo.toml  custom-index.html  custom-index.js  footer.html  index.html  index.js
css/: prism.css  styles.css
js/: index.js  prism.js
pkg/: package.json  rust_struct_creator_wasm.d.ts  rust_struct_creator_wasm.js  rust_struct_creator_wasm_bg.wasm  rust_struct_creator_wasm_bg.wasm.d.ts
src/: lib.rs
