[package]
name = "rust-struct-creator-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "0.3"
csv = "1.1"
wasm-bindgen-futures = "0.4"
serde = "1.0.210"

[lib]
crate-type = ["cdylib"]
