[package]
name = "rust-struct-creator-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "0.3"
csv = "1.1"
wasm-bindgen-futures = "0.4"
serde = "1.0.210"
itertools = "0.13.0"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]
